--- a/.pylintrc
+++ b/.pylintrc
@@ -67,6 +67,8 @@ disable=blacklisted-name,
         missing-class-docstring,
         missing-function-docstring,
         broad-exception-caught,
+        fixme,
+        redefined-builtin,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
