--- a/.azure-pipelines/ci.yml
+++ b/.azure-pipelines/ci.yml
@@ -3,21 +3,21 @@ pr:
   - releases/*
 
 jobs:
-- template: run-tests.yml
-  parameters:
-    name: Py313_Ubuntu
-    vmImage: 'ubuntu-latest'
-    pythonVersion: '3.13'
-- template: run-tests.yml
-  parameters:
-    name: Py313_Mac
-    vmImage: 'macOS-latest'
-    pythonVersion: '3.13'
-- template: run-tests.yml
-  parameters:
-    name: Py313_Win
-    vmImage: 'windows-latest'
-    pythonVersion: '3.13'
+# - template: run-tests.yml
+#   parameters:
+#     name: Py313_Ubuntu
+#     vmImage: 'ubuntu-latest'
+#     pythonVersion: '3.13'
+# - template: run-tests.yml
+#   parameters:
+#     name: Py313_Mac
+#     vmImage: 'macOS-latest'
+#     pythonVersion: '3.13'
+# - template: run-tests.yml
+#   parameters:
+#     name: Py313_Win
+#     vmImage: 'windows-latest'
+#     pythonVersion: '3.13'
 - template: run-tests.yml
   parameters:
     name: Py312_Ubuntu
