--- a/.pylintrc
+++ b/.pylintrc
@@ -69,6 +69,9 @@ disable=blacklisted-name,
         broad-exception-caught,
         fixme,
         redefined-builtin,
+        too-many-arguments,
+        protected-access,
+        too-many-public-methods,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
