--- a/.azure-pipelines/prepare-env.yml
+++ b/.azure-pipelines/prepare-env.yml
@@ -3,7 +3,7 @@ parameters:
 
 steps:
 - script: |
-    python -m pip install pycodestyle pylint
+    python -m pip install flake8
     python -m pip install coveralls coverage
     python -m pip install pytest
   displayName: Prepare general environment
