--- a/.azure-pipelines/run-tests.yml
+++ b/.azure-pipelines/run-tests.yml
@@ -17,8 +17,8 @@ jobs:
   - script: |
       coverage run -m pytest --junitxml=junit/test-results.xml tests && coverage xml
     displayName: 'Test with pytest'
-  - bash: ./pylint
-    displayName: pylint
+  - bash: flake8
+    displayName: flake8
   - task: PublishTestResults@2
     condition: succeededOrFailed()
     inputs:
@@ -28,6 +28,3 @@ jobs:
     inputs:
       codeCoverageTool: cobertura
       summaryFileLocation: coverage.xml
-  - bash: ./pycodestyle
-    condition: succeededOrFailed()
-    displayName: 'Validate code style'
